<resources>
    <string name="app_name">UpCyClick</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="balance">Balance</string>
    <string name="balance_count">123456</string>
    <string name="quiz">Quiz</string>
    <string name="buy_scroll">Buy now!</string>
    <string name="income">Income</string>
    <string name="common_scroll">Common scroll   x0</string>
    <string name="rare_scroll">Rare scroll   x0</string>
    <string name="legendary_scroll">Legendary scroll   x0</string>
    <string name="up">UP</string>
</resources>