<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/balance"
        android:textColor="#515151"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal" />

    <TextView
        android:id="@+id/coin_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/balance_count"
        android:textColor="@color/black"
        android:textSize="54sp"
        app:drawableRightCompat="@drawable/ic_small_up_coin"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <Button

        android:id="@+id/to_shop_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_selector"
        android:elevation="12dp"
        android:fontFamily="@font/roboto_light"
        android:paddingTop="11dp"
        android:paddingBottom="10dp"
        android:stateListAnimator="@null"
        android:text="@string/quiz"
        android:textAllCaps="false"
        android:textSize="37sp"
        android:translationZ="6dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/coin_count" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/income"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/to_shop_button" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <HorizontalScrollView
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbarStyle="outsideInset">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="258dp"
                    android:layout_height="45dp"
                    android:background="@drawable/button_selector"
                    android:layout_marginBottom="8dp">

                    <View
                        android:id="@+id/commonScroll"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="12dp"
                        android:background="@drawable/ic_common_scroll"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/commonCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="x0"
                        android:textColor="@color/primaryColor"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/commonScroll"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/commonTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="Common scroll"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/commonCount"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/commonIncome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="+0/sec"
                        android:textColor="@color/primaryColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/commonTitle"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="258dp"
                    android:layout_height="45dp"
                    android:background="@drawable/button_selector"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="8dp">

                    <View
                        android:id="@+id/rareScroll"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="12dp"
                        android:background="@drawable/ic_rare_scroll"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/rareCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="x0"
                        android:textColor="#039be5"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/rareScroll"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/rareTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="Rare scroll"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/rareCount"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/rareIncome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="+0/sec"
                        android:textColor="#039be5"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/rareTitle"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="258dp"
                    android:layout_height="45dp"
                    android:background="@drawable/button_selector"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="8dp">

                    <View
                        android:id="@+id/legScroll"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="12dp"
                        android:background="@drawable/ic_legendary_scroll"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/legCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="x0"
                        android:textColor="#D56225"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/legScroll"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/legTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="Legendary scroll"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/legCount"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/legIncome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="+0/sec"
                        android:textColor="#D56225"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/legTitle"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>


    <Button
        android:id="@+id/up_button"
        android:layout_width="245dp"
        android:layout_height="245dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/up_button_selector"
        android:elevation="2dp"
        android:fontFamily="@font/roboto_bold"
        android:stateListAnimator="@null"
        android:text="@string/up"
        android:textColor="@color/white"
        android:textSize="108sp"
        android:translationZ="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        tools:ignore="TextContrastCheck,TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>